final/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: mahesh
spec: {}
status: {}
