final/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - env:
        image: maheshkhade8600/nginx-hello:latest
        imagePullPolicy: Always
        name: blog
        ports:
        - containerPort: 80
